Adjust the scroller based on the new size of the financial report page. Fix elements on mobile size

--- a/cmd/dcrdata/public/scss/finance_report.scss
+++ b/cmd/dcrdata/public/scss/finance_report.scss
@@ -1,6 +1,12 @@
 .finance-report-page {
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 80px !important;
   padding-right: 80px !important;
+}
+
+.auto-scroller {
+  margin-left: 80px;
 }
 
 .treasury-report-chart {
@@ -53,6 +59,10 @@
     padding-right: 30px !important;
   }
 
+  .auto-scroller {
+    margin-left: 30px;
+  }
+
   .report-year-text {
     padding-right: 30px !important;
   }
@@ -66,6 +76,10 @@
   .finance-report-page {
     padding-left: 5px !important;
     padding-right: 5px !important;
+  }
+
+  .auto-scroller {
+    margin-left: 5px;
   }
 
   .report-year-text {
@@ -105,6 +119,11 @@
   .report-year-text {
     padding-right: 15px !important;
   }
+
+  .note-search-row {
+    display: block;
+    margin-bottom: 5px;
+  }
 }
 
 @media (max-width: 830px) {
@@ -124,6 +143,15 @@
 
   .report-search-input {
     width: 200px;
+  }
+
+  .type-selector-row {
+    display: block;
+  }
+
+  .proposal-selector {
+    margin-left: 0;
+    margin-top: 10px;
   }
 }
 
